# goldfinger

./: .env.example  .gitignore  pyproject.toml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
engine/: .env.example  pyproject.toml
engine/config/: settings.yaml
engine/src/: crypto.py  hft.py  main.py  models.py
engine/src/core/: arbitrage.py  executor.py  matcher.py  strategy.py
engine/src/exchanges/: __init__.py  kalshi.py
engine/src/server/: app.py  firewall.py  scanner.py
engine/src/server/routes/: __init__.py  api.py  dashboard.py
engine/src/static/css/: goldfinger.css
engine/src/static/js/: goldfinger.js
src/: __main__.py  dashboard.py
src/core/: strategy.py
src/exchanges/: __init__.py  kalshi.py  polymarket.py
src/server/: __init__.py  app.py  scanner.py
src/server/routes/: api.py
src/templates/: dashboard.html
web/: .env.local.example  package-lock.json  package.json
web/prisma/: schema.prisma
web/prisma/migrations/20260225090604_init/: migration.sql
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(dashboard)/: layout.tsx
web/src/app/(dashboard)/dashboard/: page.tsx
web/src/app/(dashboard)/engine/: page.tsx
web/src/app/(dashboard)/settings/: page.tsx
web/src/app/api/keys/: route.ts
web/src/app/api/scan/: route.ts
web/src/app/api/sync/: route.ts
web/src/app/api/trade/: route.ts
web/src/app/api/trades/: route.ts
web/src/app/login/: page.tsx
web/src/components/dashboard/: DashboardShell.tsx  EmptyState.tsx  PerformanceChart.tsx  SignalCard.tsx  StatsRow.tsx  TradeHistory.tsx
web/src/components/landing/: LandingPage.tsx
web/src/lib/: auth.ts  crypto.ts  engine.ts  prisma.ts
web/src/types/: fernet.d.ts  next-auth.d.ts
(+4 files in other folders)
