[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "prediction-arb"
version = "0.1.0"
description = "Cross-platform prediction market arbitrage bot"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "py-clob-client>=0.1.0",
    "cryptography>=42.0",
    "pandas>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ipython>=8.0",
]

[project.scripts]
arb-scanner = "src.main:main"
arb-dashboard = "src.dashboard:main"
arb-hft = "src.hft:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
